--- a/global.css
+++ b/global.css
@@ -128,10 +128,18 @@ a {
 }
 
 .myPhotosImage {
-    margin: 1em; 
-    max-width: 400px; 
-    max-height: 400px; 
     width: 100%; 
     height: 100%;
 }
 
+.colourPickerContainer {
+    text-align: center; 
+    margin-bottom: 5em;
+}
+
+.colourPickerButton {
+    background: grey;
+    width: 20vw;
+    margin: 0 auto;
+    border-radius: 20px;
+}
